plugins {
    id 'org.springframework.boot' version '2.5.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'com.vaadin' version '0.14.6.0'
    id 'java'
}

group = 'cz.okozel'
sourceCompatibility = '11'

repositories {
    mavenCentral()
    maven { url = "https://maven.vaadin.com/vaadin-addons" }
}

ext {
    set('vaadinVersion', "14.7.1")
}

dependencies {
    implementation 'com.vaadin:vaadin-spring-boot-starter:21.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
    developmentOnly("org.springframework.boot:spring-boot-devtools")
}

dependencyManagement {
    imports {
        mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
    }
}

test {
    useJUnitPlatform()
}
